# THRESHER

./: .gitignore  README.md  build.sh  install.sh  meta.yaml  pyproject.toml  thresher.yml
docs/: conda_environment_management.md  genbank_accession.md  installation.md  quick_start.md  requirements.md  resuming_interrupted_runs.md  usage_cladebreaker_off.md  usage_evolution_simulator.md  usage_full_pipeline.md  usage_genome_profiler.md  usage_new_full.md  usage_new_snps.md  usage_redo_endpoint.md  usage_strain_identifier.md  usage_strain_identifier_cladebreaker_off.md  usage_strain_identifier_full_pipeline.md  usage_strain_identifier_new_full.md  usage_strain_identifier_new_snps.md  usage_strain_identifier_redo_endpoint.md  usage_thresher_overview.md
docs/example/: example_metadata.txt
thresher/workflow/: Snakefile  Snakefile_cladebreaker_off  Snakefile_evo_simulator  Snakefile_full  Snakefile_genome_profiler  Snakefile_new_full  Snakefile_new_snps  Snakefile_redo_endpoint  Snakefile_strain_identifier_cladebreaker_off  Snakefile_strain_identifier_full  Snakefile_strain_identifier_new_full  Snakefile_strain_identifier_new_snps
thresher/workflow/envs/: R_env.yaml  assembly_scan.yaml  bakta.yaml  blast.yaml  datasets.yaml  evo_simulator.yaml  fastani.yaml  iqtree.yaml  mlst.yaml  mummer4.yaml  panaroo.yaml  snippy.yaml  whatsgnu.yaml
thresher/workflow/rules/: assembly_scan.smk  assembly_scan_new_full.smk  bakta_annotation.smk  bakta_annotation_new_full.smk  bakta_annotation_profiler.smk  bakta_db.smk  blastx_MRSA.smk  blastx_MRSA_new_full.smk  blastx_MRSA_new_snps.smk  datasets_topgenomes.smk  datasets_topgenomes_profiler.smk  fastani_profiler.smk  genome_profiler.smk  hierarchical_clustering.smk  iqtree_comprehensive.smk  iqtree_core_gene.smk  iqtree_everything.smk  iqtree_groups.smk  mlst.smk  mlst_new.smk  mummer4_global.smk  mummer4_global_new_full.smk  mummer4_profiler.smk  mummer4_public.smk  mummer4_public_new_full.smk  mummer4_study.smk  mummer4_study_new_full.smk  mummer4_study_new_snps.smk  panaroo.smk  panaroo_new_full.smk  plot_cluster_plots.smk  plot_cluster_plots_new_full.smk  plot_cluster_plots_new_snps.smk  plot_cluster_plots_redo_endpoint.smk  plot_comprehensive_tree.smk  plot_core_gene_tree.smk  (+36 more)
(+44 files in other folders)
