[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thresher"
version = "0.4.0-beta"
description = "THRESHER: A framework that replaces fixed cutoffs with data-driven phylothresholds - the SNP thresholds corrected for phylogenetic topology and inferred directly from each dataset's genomic structure."
readme = "README.md"
authors = [
    {name = "Qianxuan(Sean) She", email = "sheq@chop.edu"},
    {name = "Paul J Planet", email = "planetp@chop.edu"},
    {name = "Ahmed M Moustafa", email = "moustafaam@chop.edu"},
    {name = "Joseph P Zackular", email = "joseph.zackular@pennmedicine.upenn.edu"}
]
dependencies = [
    "snakemake>=9.0",
    "pyyaml>=6.0",
    "pandas>=2.0"
]

[project.scripts]
thresher = "thresher.bin.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["thresher*"]
exclude = ["thresher.workflow*"]

[tool.setuptools.package-data]
thresher = [
    "workflow/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]
